force-app/main/default/objects/County__c/fields/Education_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Education_Sales_Rep__c</fullName>
    <label>Education Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>