force-app/main/default/objects/County__c/fields/Enterprise_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Sales_Rep__c</fullName>
    <label>Enterprise Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>