force-app/main/default/objects/County__c/fields/State_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>State_Name_Full__c</fullName>
    <label>State Name Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>